--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -11,7 +11,7 @@
   {% include "webpack/css.njk" %}
   <script>
     dataLayer = window.dataLayer || [];
-    dataLayer.push({"language": {{ language | dump | safe }}, "event": "Site language"})
+    dataLayer.push({"language": {{ language | dump | safe }}, "event": "Site language"});
   </script>
 
   <meta name="google-site-verification" content="3glfkE1sBXj7EtEdO0ktOm5kyR9E14kR7yw_yJ6GH4U" />
@@ -179,6 +179,7 @@
       }
     }
   }
+  document.documentElement.setAttribute("lang", {{ language | dump | safe }});
   </script>
   {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
   {% include "webpack/js.njk" %}
